MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/signature__TemplateSignatureArea__c.object-meta.xml
<CustomObject>
    <description>Signature ares on a PDF Template</description>
    <label>ß PDF Template Signature Area</label>
    <nameField>
        <displayFormat>TSA{00000}</displayFormat>
        <label>TSA#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß PDF Template Signature Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>