MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/fields/signature__Bottom__c.field-meta.xml
<CustomField>
    <fullName>signature__Bottom__c</fullName>
    <inlineHelpText>The Signature Box placement on vertical position is based on the PX distance from bottom.
So 100 means 100px up from bottom of the PDF</inlineHelpText>
    <label>Bottom</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>