MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/fields/signature__Fill_Color__c.field-meta.xml
<CustomField>
    <fullName>signature__Fill_Color__c</fullName>
    <inlineHelpText>Signature Box have tow horizontal parallel lines,the fill color is the color of the lines.</inlineHelpText>
    <label>Fill Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>