MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/fields/signature__Height__c.field-meta.xml
<CustomField>
    <fullName>signature__Height__c</fullName>
    <inlineHelpText>The PX distance between the horizontal lines which make Signature box,</inlineHelpText>
    <label>Height</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>