MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/fields/signature__Page__c.field-meta.xml
<CustomField>
    <fullName>signature__Page__c</fullName>
    <inlineHelpText>The Page of the PDF where Signature Box will show</inlineHelpText>
    <label>Page #</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>