MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/fields/signature__Right__c.field-meta.xml
<CustomField>
    <fullName>signature__Right__c</fullName>
    <inlineHelpText>The position of the signature box in horizontal is based on the PX distance from Right.
So 500 means 500px from right.</inlineHelpText>
    <label>Right</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>