MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/fields/signature__Thikness__c.field-meta.xml
<CustomField>
    <fullName>signature__Thikness__c</fullName>
    <inlineHelpText>The horizontal lines thickness.</inlineHelpText>
    <label>Thikness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>