MyDemoOrg/force-app/main/default/objects/signature__TemplateSignatureArea__c/fields/signature__Width__c.field-meta.xml
<CustomField>
    <fullName>signature__Width__c</fullName>
    <inlineHelpText>The width of the Signature Box on the PDF.</inlineHelpText>
    <label>Width</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>